[package]
name = "wpmeta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = { version = "4.4", features = [ "derive" ] }
eyre = "0.6"
toml = "0.8"
image = "0.24"
serde = { version = "1.0", features = [ "derive" ] }
hex_color = { version = "2.0", features = [ "serde" ] }
serde_json = "1.0"
tinytemplate = "1.2"
pretty_env_logger = "0.5"

locale = { path = "../locale" }
