[package]
name = "wpmeta"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = { version = "4.5", features = [ "derive" ] }
eyre = "0.6"
spdx = "0.13"
toml = "0.9"
image = "0.25"
rayon = "1.11"
serde = { version = "1.0", features = [ "derive" ] }
hex_color = { version = "3.0", features = [ "serde" ] }
serde_json = "1.0"
tinytemplate = "1.2"
pretty_env_logger = "0.5"

localized = { path = "../localized" }
